--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="location" content="Adelaide; Australia; SA">
     <link rel="stylesheet" type="text/css" href="./main_style.css">
     <link rel="icon" type="image/ico" href="./img/ico_logo.ico">
-    <title>Lentop Mortgage</title>
+    <title>Lentop Mortgage Solutions</title>
 </head>
 
 <body>
